# dirpulse

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: age.rs  display.rs  file_info.rs  lib.rs  main.rs  utils.rs
