[package]
name = "dirpulse"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Bradley Smith"]
description = "A CLI tool to analyze directory contents and report file statistics"
license = "MIT"
repository = "https://github.com/bradleyd/dirpulse"
readme = "README.md"
keywords = ["cli", "directory", "disk-usage", "files", "statistics"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5.0"
colored = "3.0.0"
